--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>vimpl - Visual Project Management Made Simple</title>
+    <title>vimpl - Visual Management and Planning made simpl'</title>
     <meta name="description" content="vimpl is a visual planning board for teams. Manage projects, track risks, and collaborate in real-time with an intuitive drag-and-drop interface.">
     
     <!-- Favicon -->
