--- a/frontend/login.html
+++ b/frontend/login.html
@@ -436,7 +436,8 @@
         // Google login
         function loginWithGoogle() {
             // Redirect to backend Google OAuth endpoint
-            window.location.href = 'http://localhost:3001/api/v1/auth/google';
+            const baseUrl = apiClient.baseURL.replace('/api/v1', ''); // Get root URL
+            window.location.href = `${baseUrl}/api/v1/auth/google`;
         }
 
         // Show error message
