--- a/frontend/register.html
+++ b/frontend/register.html
@@ -508,7 +508,8 @@
         // Google sign up
         function signUpWithGoogle() {
             // Redirect to backend Google OAuth endpoint
-            window.location.href = 'http://localhost:3001/api/v1/auth/google';
+            const baseUrl = apiClient.baseURL.replace('/api/v1', ''); // Get root URL
+            window.location.href = `${baseUrl}/api/v1/auth/google`;
         }
 
         // Show error message
