Fix: update API client URL to working backend and add Terms/Privacy placeholders

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -167,8 +167,8 @@
     <div class="footer-container">
       <div class="footer-logo">vimpl<span>.com</span></div>
       <div class="footer-links">
-        <a href="#" class="footer-link">Privacy</a>
-        <a href="#" class="footer-link">Terms</a>
+        <a href="privacy.html" class="footer-link">Privacy</a>
+        <a href="terms.html" class="footer-link">Terms</a>
         <a href="https://github.com/kristiansteen/vimpl" class="footer-link" target="_blank">
           <i class="fab fa-github"></i> GitHub
         </a>
