--- a/frontend/register.html
+++ b/frontend/register.html
@@ -370,8 +370,8 @@
 
             <div class="terms">
                 By creating an account, you agree to our
-                <a href="#" onclick="alert('Terms coming soon!'); return false;">Terms of Service</a> and
-                <a href="#" onclick="alert('Privacy Policy coming soon!'); return false;">Privacy Policy</a>.
+                <a href="terms.html">Terms of Service</a> and
+                <a href="privacy.html">Privacy Policy</a>.
             </div>
 
             <button type="submit" class="btn btn-primary" id="registerBtn">
