--- a/frontend/terms.html
+++ b/frontend/terms.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - vimpl</title>
-    <meta name="description" content="About vimpl - The visual planning tool for agile teams.">
+    <title>Terms of Service - vimpl</title>
+    <meta name="description" content="Terms of Service for vimpl - The visual planning tool.">
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml"
@@ -29,7 +29,7 @@
             <div class="nav-links">
                 <a href="index.html#features" class="nav-link">Features</a>
                 <a href="pricing.html" class="nav-link">Pricing</a>
-                <a href="about.html" class="nav-link active">About</a>
+                <a href="about.html" class="nav-link">About</a>
             </div>
             <div class="nav-auth">
                 <a href="login.html" class="nav-link">Log in</a>
@@ -38,79 +38,38 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
-    <section class="hero" style="min-height: 400px; padding-top: 120px; padding-bottom: 60px;">
+    <!-- Header Section -->
+    <section class="hero" style="min-height: 300px; padding-top: 120px; padding-bottom: 40px;">
         <div class="hero-container" style="flex-direction: column; text-align: center; gap: 20px;">
-            <h1 style="max-width: 800px; margin: 0 auto;">Mission: <span style="color: var(--primary);">Simplify
-                    Planning</span></h1>
+            <h1 style="max-width: 800px; margin: 0 auto;">Terms of <span style="color: var(--primary);">Service</span>
+            </h1>
             <p style="max-width: 600px; margin: 0 auto; color: var(--gray-600); font-size: 1.25rem;">
-                We believe that complex projects don't need complex tools. Vimpl was built to bring clarity, visuality,
-                and fun back into project management.
+                Last updated: January 2026
             </p>
         </div>
     </section>
 
-    <!-- Story Section -->
-    <section class="features" style="background: white;">
+    <!-- Content Section -->
+    <section class="features" style="background: white; padding-top: 40px;">
         <div class="features-container">
-            <div class="section-header">
-                <h2>The Story</h2>
-                <p>From a frustration with spreadsheets to a visual revolution.</p>
-            </div>
             <div style="max-width: 800px; margin: 0 auto; font-size: 1.1rem; line-height: 1.8; color: var(--gray-700);">
                 <p style="margin-bottom: 24px;">
-                    Vimpl started as a side project by <strong>Kristian Steen</strong>, a software engineer and product
-                    enthusiast based in Copenhagen, Denmark.
-                    Frustrated by the rigidity of traditional Gantt charts and the chaos of physical post-it notes
-                    falling off walls, Kristian set out to build a digital solution that felt as flexible as a
-                    whiteboard but as powerful as a database.
+                    [Content will be provided by user later. This is a placeholder for the Terms of Service for
+                    vimpl.com.]
                 </p>
-                <p>
-                    What began as a simple grid for organizing tasks has grown into a comprehensive visual planning
-                    suite used by teams to track risks, manage sprints, and visualize KPIs in real-time.
+
+                <h2 style="margin: 40px 0 20px; color: var(--gray-900);">1. Introduction</h2>
+                <p style="margin-bottom: 24px;">
+                    Welcome to vimpl. By using our service, you agree to these terms. Please read them carefully.
                 </p>
-            </div>
-        </div>
-    </section>
 
-    <!-- Team Section -->
-    <section class="features" style="background: var(--gray-50);">
-        <div class="features-container">
-            <div class="section-header">
-                <h2>Meet the Founder</h2>
-            </div>
-            <div style="display: flex; justify-content: center; gap: 40px; margin-top: 40px;">
-                <div class="feature-card" style="text-align: center; max-width: 350px;">
-                    <div
-                        style="width: 120px; height: 120px; border-radius: 50%; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); margin: 0 auto 24px; display: flex; align-items: center; justify-content: center; color: white; font-size: 48px; font-weight: bold;">
-                        K
-                    </div>
-                    <h3>Kristian Steen</h3>
-                    <p style="color: var(--primary); font-weight: 600; margin-bottom: 12px;">Founder & Lead Developer
-                    </p>
-                    <p>
-                        Passionate about building intuitive software that solves real problems. With a background in
-                        product development and agile methodologies, Kristian leads the vision and engineering of vimpl.
-                    </p>
-                    <div style="margin-top: 16px;">
-                        <a href="https://github.com/kristiansteen" target="_blank"
-                            style="color: var(--gray-600); font-size: 24px; margin: 0 8px;"><i
-                                class="fab fa-github"></i></a>
-                        <!-- LinkedIn or other arguably relevant links could go here -->
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+                <h2 style="margin: 40px 0 20px; color: var(--gray-900);">2. Using our Services</h2>
+                <p style="margin-bottom: 24px;">
+                    You must follow any policies made available to you within the Services. Don’t misuse our Services...
+                </p>
 
-    <!-- CTA Section -->
-    <section class="cta">
-        <div class="cta-container">
-            <h2>Join the journey</h2>
-            <p>Be part of the visual planning revolution.</p>
-            <a href="register.html" class="btn-primary">
-                <i class="fas fa-rocket"></i> Get Started Free
-            </a>
+                <!-- Additional placeholders can go here -->
+            </div>
         </div>
     </section>
 
