fix: consolidate auth middleware, improve CORS for Vercel previews, and enhance dashboard error reporting

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -631,7 +631,8 @@
                 }
             } catch (error) {
                 console.error('Failed to load boards:', error);
-                document.getElementById('loading').innerHTML = '<p style="color: #e74c3c;">Failed to load boards. Please try again.</p>';
+                const status = error.status ? ` (Status: ${error.status})` : '';
+                document.getElementById('loading').innerHTML = `<p style="color: #e74c3c;">Failed to load boards${status}. ${error.message || 'Please try again.'}</p>`;
             }
         }
 
